--- a/src/main/webapp/app/home/home.scss
+++ b/src/main/webapp/app/home/home.scss
@@ -2,11 +2,29 @@
 Main page styles
 ========================================================================== */
 
+.home-page-container {
+    background: url('../../content/images/Elasticsearch-Hugo.jpg') no-repeat center top;
+    background-size: cover;
+    margin: -2%;
+    padding: +2%;
+}
+
+.title-space {
+    margin-top: 15rem;
+}
+
+.glass-card {
+    border-radius: 6px;
+    border: none;
+    backdrop-filter: blur(10px) brightness(95%);
+    box-shadow: #00000033 0 0 20px 15px;
+}
+
 .hipster {
     display: inline-block;
-    width: 347px;
-    height: 497px;
-    background: url('../../content/images/jhipster_family_member_1.svg') no-repeat center top;
+    width: 300px;
+    height: 300px;
+    background: url('../../content/images/bitmoji_hi.png') no-repeat center top;
     background-size: contain;
 }
 
@@ -17,7 +35,7 @@ Main page styles
     only screen and (min-resolution: 192dpi),
     only screen and (min-resolution: 2dppx) {
     .hipster {
-        background: url('../../content/images/jhipster_family_member_1.svg') no-repeat center top;
+        background: url('../../content/images/bitmoji_hi.png') no-repeat center top;
         background-size: contain;
     }
 }
